change to odata + comment code
