# src/routes/odataRouter.js
@@ -1,8 +1,9 @@
 // / sample posts for routers
 // / action: create the post, edit the post, update the post, delete the post
 import {Router} from 'express';
-import {generic as genericController} from '../controllers';
+import {odata as odataController} from '../controllers';
 
+//copy style from .net odata
 const router = Router();
-router.get('/', genericController.getAll);
+router.get('/:tableName', odataController.getAll);
 export default router;
